<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?attr/colorButtonNormal">

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:paddingEnd="23dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="22dp"
            android:layout_toStartOf="@+id/textView9"
            android:width="180px"
            android:height="10px"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:paddingStart="60dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_alignBaseline="@+id/weight"
            android:layout_alignBottom="@+id/weight"
            android:layout_alignParentStart="true"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:text="@string/kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_marginEnd="82dp"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/weight"
            android:layout_alignBottom="@+id/weight"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="122dp"
            android:width="180px"
            android:height="10px"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:paddingStart="60dp"
            android:textSize="18sp"
            android:textColor="@android:color/background_dark"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/height"
            android:layout_alignStart="@+id/height"

            android:layout_alignBottom="@+id/height"
            android:layout_marginStart="110dp"
            android:text="@string/cm"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="70dp"
            android:paddingTop="10dp"
            android:text="@string/steps"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="122dp"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </RelativeLayout>

    <Button
    android:layout_width="142dp"
    android:layout_height="wrap_content"
    android:text="@string/start"
    android:id="@+id/start_button"
    android:onClick="startButtonClick"
    tools:ignore="UsingOnClickInXml" />


    <Button
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetButton"
        android:onClick="resetButtonClick"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stop_button"
        android:onClick="stopButtonClick"
        android:layout_marginBottom="45dp"
        tools:ignore="UsingOnClickInXml" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/hmsTekst"
        android:textColor="#FFFFFF" />



        <TextView
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="18sp"

            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            android:paddingStart="40dp"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimaryDark"
            android:textStyle="normal|italic"
            android:textAlignment="center"
            tools:ignore="RtlSymmetry" />

</LinearLayout>
